fixed bg stars alignment

--- a/Spacey/css/style.css
+++ b/Spacey/css/style.css
@@ -138,7 +138,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(../img/hero-bg.jpg) center;
+  background: url(../img/hero-bg.jpg)fixed;
   background-size:cover;
   position: relative;
 }
@@ -151,7 +151,6 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0.6);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -496,7 +495,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* About Us Section
 --------------------------------*/
 #about {
-  background: linear-gradient(#090A18, #210834);
+  background: linear-gradient(#1F102E, #210834);
   padding: 80px 0;
 }
 
